.manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meter-readings-deployment
  namespace: meter-readings
  labels:
    app: meter-readings
spec:
  selector:
    matchLabels:
      app: meter-readings
  template:
    metadata:
      labels:
        app: meter-readings
    spec:
      containers:
        - name: meter-readings
          image: sebcibaric/meter-readings:latest
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            failureThreshold: 5
          ports:
            - containerPort: 8080
