.manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meter-readings-ingress
  namespace: meter-readings
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: meter-readings-scibaric-dev-tls
      hosts:
        - meter-readings.scibaric.dev
  rules:
  - host: meter-readings.scibaric.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: meter-readings-service
              port:
                number: 80
